fix(ui): dark mode primary color

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -57,6 +57,8 @@
 
   html[data-theme='dark'] {
     --ifm-link-color: #1a90ff;
+    --ifm-tabs-color-active-border: #1a90ff;
+    --ifm-tabs-color-active: #1a90ff;
     --ifm-color-primary: #1a90ff;
 
     --docs-color-text: #ffffff;
