--- a/src/theme/BackToTopButton/styles.module.css
+++ b/src/theme/BackToTopButton/styles.module.css
@@ -18,7 +18,7 @@
   right: 1.3rem;
   bottom: 5rem;
   border-radius: 50%;
-  background: var(--docusaurus-btt-background);
+  background: var(--docs-color-primary);
   color: var(--docusaurus-btt-color);
   width: 3rem;
   height: 3rem;
